--- a/Stock_Prediction.ipynb
+++ b/Stock_Prediction.ipynb
@@ -576,7 +576,7 @@
     "id": "nZqth2zhNGJh"
    },
    "source": [
-    "### Handling Outliers in Volume"
+    "### Handling Outliers"
    ]
   },
   {
